# LZ-Renderer

./: CMakeLists.txt  README.md
application/: assimpInstanceLoader.cpp  assimpInstanceLoader.h
application/camera/: camera.cpp  camera.h  gameCameraControl.cpp  gameCameraControl.h
assets/shaders/: lighting.frag  phongPointShadow.frag
assets/shaders/common/: phongLightFunc.glsl
core/: application.cpp  application.h
examples/: deferred.cpp  deferred_demo.cpp  pbr.cpp  pbr_demo.cpp  shadow.cpp  shadow_demo.cpp
glframework/: object.h  texture.cpp  texture.h
glframework/framebuffer/: framebuffer.cpp  framebuffer.h
glframework/light/: pointLight.cpp
glframework/material/: gBufferMaterial.cpp  gBufferMaterial.h  lightingMaterial.cpp  lightingMaterial.h  material.h  phongPointShadowMaterial.cpp  phongPointShadowMaterial.h
glframework/mesh/: instancedMesh.cpp  instancedMesh.h
glframework/renderer/: renderer.cpp  renderer.h
loader/: assimp_loader.cpp  assimp_loader.h
renderer/: renderer.cpp  renderer.h
renderer/post_processing/: bloom.cpp
renderer/scene/: object.cpp  object.h
renderer/scene/mesh/material/: pbr_material.h
renderer/shaders/pbr/: pbr.frag
renderer/shaders/pbr/ibl/diffuse/: irradiance_map.frag
renderer/shaders/pbr/ibl/specular/: brdf.frag  prefilter.frag
renderer/shaders/shadow/: phong_point_shadow.frag
wrapper/: check_error.cpp  check_error.h  framebuffer.cpp  framebuffer.h  shader.cpp  texture.cpp  texture.h
